--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "test:code:gen:currying-function": "pnpm ts ./scripts/testCodeGenWithCurryingFunctional.ts",
     "test:depcruise": "depcruise --validate .dependency-cruiser.cjs src",
     "test:eslint": "eslint \"src/**/*.{ts,tsx}\"",
-    "test:jest": "NODE_OPTIONS=--experimental-specifier-resolution=node jest -c ./jest.config.cjs --collect-coverage",
+    "test:jest": "cross-env NODE_OPTIONS=--experimental-specifier-resolution=node jest -c ./jest.config.cjs --collect-coverage",
     "test:snapshot": "jest -c ./jest.snapshot.config.cjs",
     "ts": "node --no-warnings=ExperimentalWarning --experimental-specifier-resolution=node --loader ts-node/esm",
     "update:snapshot": "pnpm jest -c ./jest.snapshot.config.cjs --updateSnapshot",
@@ -91,6 +91,7 @@
     "chokidar": "3.5.3",
     "conventional-changelog-angular-all": "1.7.0",
     "cpy": "11.0.0",
+    "cross-env": "^7.0.3",
     "dependency-cruiser": "16.1.0",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
