--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "sort-package-json": "2.7.0",
     "ts-jest": "29.1.2",
     "ts-node": "10.9.2",
+    "tsup": "^8.0.1",
     "typescript": "5.3.3"
   },
   "engines": {
