--- a/package.json
+++ b/package.json
@@ -57,11 +57,10 @@
     "package.json"
   ],
   "scripts": {
+    "lint": "biome lint .",
+    "format": "biome format --write .",
     "build": "tsup",
     "clean": "pnpm ts ./scripts/clean.ts",
-    "format": "run-s format:code format:code:eslint",
-    "format:code": "prettier \"**/*.{js,jsx,ts,tsx,json,yml,yaml,md,html}\" --write",
-    "format:code:eslint": "eslint \"**/*.{ts,tsx}\" --fix",
     "lerna:version:up": "lerna version --yes",
     "release:github:registry": "pnpm publish  --no-git-checks --registry https://npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}",
     "release:npm:registry": "pnpm publish --no-git-checks",
@@ -71,7 +70,6 @@
     "test:code:gen:function": "pnpm ts ./scripts/testCodeGenWithFunctional.ts",
     "test:code:gen:currying-function": "pnpm ts ./scripts/testCodeGenWithCurryingFunctional.ts",
     "test:depcruise": "depcruise --validate .dependency-cruiser.cjs src",
-    "test:eslint": "eslint \"src/**/*.{ts,tsx}\"",
     "test:jest": "cross-env NODE_OPTIONS=--experimental-specifier-resolution=node jest -c ./jest.config.cjs --collect-coverage",
     "test:snapshot": "jest -c ./jest.snapshot.config.cjs",
     "ts": "node --no-warnings=ExperimentalWarning --experimental-specifier-resolution=node --loader ts-node/esm",
@@ -81,6 +79,14 @@
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx,json,yml,yaml,html,md,ts,tsx}": [
+      "biome format --write"
+    ],
+    "package.json": [
+      "sort-package-json"
+    ]
   },
   "resolutions": {
     "kind-of": "6.0.3",
@@ -94,6 +100,7 @@
     "js-yaml": "4.1.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.5.3",
     "@commitlint/cli": "18.6.0",
     "@commitlint/config-conventional": "18.6.0",
     "@swc/core": "^1.3.107",
@@ -104,18 +111,11 @@
     "@types/js-yaml": "4.0.9",
     "@types/node": "20.11.15",
     "@types/rimraf": "3.0.2",
-    "@typescript-eslint/eslint-plugin": "6.20.0",
-    "@typescript-eslint/parser": "6.20.0",
     "chokidar": "3.5.3",
     "conventional-changelog-angular-all": "1.7.0",
     "cpy": "11.0.0",
     "cross-env": "^7.0.3",
     "dependency-cruiser": "16.1.0",
-    "eslint": "8.56.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
     "execa": "8.0.1",
     "generate-changelog": "1.8.0",
     "import-sort-style-module": "6.0.0",
@@ -125,8 +125,6 @@
     "lint-staged": "15.2.1",
     "npm-run-all": "4.1.5",
     "openapi-schema-validator": "12.1.3",
-    "prettier": "3.2.4",
-    "prettier-plugin-import-sort": "0.0.7",
     "read-package-up": "^11.0.0",
     "rimraf": "5.0.5",
     "simple-git-hooks": "^2.9.0",
