--- a/examples/pure-js/package.json
+++ b/examples/pure-js/package.json
@@ -12,7 +12,7 @@
     "gen": "node ./gen.js"
   },
   "devDependencies": {
-    "@himenon/openapi-typescript-code-generator": "^0.27.4",
+    "@himenon/openapi-typescript-code-generator": "link:../..",
     "@types/node": "^20.11.16",
     "typescript": "^5.3.3"
   }
