--- a/examples/apis/tsconfig.json
+++ b/examples/apis/tsconfig.json
@@ -2,12 +2,12 @@
   "compilerOptions": {
     "module": "esnext",
     "declaration": false,
-    "moduleResolution": "node",
+    "moduleResolution": "node"
   },
   "include": ["."],
   "exclude": ["node_modules"],
   "ts-node": {
     "esm": true,
-    "swc": true,
-  },
+    "swc": true
+  }
 }
