--- a/.github/actions/initialize/action.yml
+++ b/.github/actions/initialize/action.yml
@@ -7,6 +7,6 @@ runs:
       run: |
         git config --global core.autocrlf false
         git config --global core.eol lf
-        git config --global user.email "actions@gihub.com"
+        git config --global user.email "actions@github.com"
         git config --global user.name "gh-actions"
       shell: bash
