--- a/package.json
+++ b/package.json
@@ -57,25 +57,25 @@
     "package.json"
   ],
   "scripts": {
-    "lint": "biome lint .",
-    "format": "biome format --write .",
     "build": "tsup",
     "clean": "pnpm ts ./scripts/clean.ts",
+    "format": "biome format --write .",
     "lerna:version:up": "lerna version --yes",
+    "lint": "biome lint .",
     "release:github:registry": "pnpm publish  --no-git-checks --registry https://npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}",
     "release:npm:registry": "pnpm publish --no-git-checks",
     "test": "run-p test:depcruise test:jest test:code:gen:* test:snapshot",
     "test:code:gen": "run-p test:code:gen:*",
     "test:code:gen:class": "pnpm ts ./scripts/testCodeGenWithClass.ts",
-    "test:code:gen:function": "pnpm ts ./scripts/testCodeGenWithFunctional.ts",
     "test:code:gen:currying-function": "pnpm ts ./scripts/testCodeGenWithCurryingFunctional.ts",
+    "test:code:gen:function": "pnpm ts ./scripts/testCodeGenWithFunctional.ts",
     "test:depcruise": "depcruise --validate .dependency-cruiser.cjs src",
     "test:jest": "cross-env NODE_OPTIONS=--experimental-specifier-resolution=node jest -c ./jest.config.cjs --collect-coverage",
     "test:snapshot": "jest -c ./jest.snapshot.config.cjs",
     "ts": "node --no-warnings=ExperimentalWarning --experimental-specifier-resolution=node --loader ts-node/esm",
     "update:snapshot": "pnpm jest -c ./jest.snapshot.config.cjs --updateSnapshot",
-    "watch": "pnpm ts ./scripts/watch.ts",
-    "validate": "pnpm ts ./scripts/validate.ts"
+    "validate": "pnpm ts ./scripts/validate.ts",
+    "watch": "pnpm ts ./scripts/watch.ts"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
@@ -94,45 +94,45 @@
   },
   "dependencies": {
     "@types/json-schema": "7.0.15",
-    "ajv": "8.12.0",
+    "ajv": "8.17.1",
     "js-yaml": "4.1.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@commitlint/cli": "18.6.0",
-    "@commitlint/config-conventional": "18.6.0",
+    "@biomejs/biome": "^2.0.0",
+    "@commitlint/cli": "19.8.1",
+    "@commitlint/config-conventional": "19.8.1",
     "@himenon/path-oriented-data-structure": "1.0.2",
-    "@swc/core": "^1.9.3",
-    "@swc/helpers": "^0.5.15",
-    "@swc/jest": "^0.2.37",
-    "@types/chokidar": "2.1.3",
-    "@types/jest": "29.5.12",
+    "@swc/core": "^1.12.1",
+    "@swc/helpers": "^0.5.17",
+    "@swc/jest": "^0.2.38",
+    "@types/chokidar": "2.1.7",
+    "@types/jest": "30.0.0",
     "@types/js-yaml": "4.0.9",
-    "@types/node": "20.11.16",
-    "@types/rimraf": "3.0.2",
-    "chokidar": "3.5.3",
+    "@types/node": "24.0.3",
+    "@types/rimraf": "4.0.5",
+    "chokidar": "4.0.3",
     "conventional-changelog-angular-all": "1.7.0",
-    "cpy": "11.0.0",
+    "cpy": "11.1.0",
     "cross-env": "^7.0.3",
-    "dependency-cruiser": "16.1.0",
-    "dot-prop": "8.0.2",
-    "execa": "8.0.1",
+    "dependency-cruiser": "16.10.3",
+    "dot-prop": "9.0.0",
+    "execa": "9.6.0",
     "generate-changelog": "1.8.0",
     "import-sort-style-module": "6.0.0",
-    "jest": "29.7.0",
-    "jest-cli": "29.7.0",
-    "lerna": "8.0.2",
-    "lint-staged": "15.2.1",
+    "jest": "30.0.1",
+    "jest-cli": "30.0.1",
+    "lerna": "8.2.2",
+    "lint-staged": "16.1.2",
     "npm-run-all": "4.1.5",
     "openapi-schema-validator": "12.1.3",
     "read-package-up": "^11.0.0",
-    "rimraf": "5.0.5",
-    "simple-git-hooks": "^2.11.1",
-    "sort-package-json": "2.7.0",
-    "ts-jest": "29.1.2",
+    "rimraf": "6.0.1",
+    "simple-git-hooks": "^2.13.0",
+    "sort-package-json": "3.2.1",
+    "ts-jest": "29.4.0",
     "ts-node": "10.9.2",
-    "tsup": "^8.3.5",
-    "typescript": "5.3.3"
+    "tsup": "^8.5.0",
+    "typescript": "5.8.3"
   },
   "peerDependencies": {
     "typescript": ">=5"
