--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
   "peerDependencies": {
     "typescript": ">=5"
   },
+  "packageManager": "pnpm@10.12.1",
   "engines": {
     "pnpm": ">=9"
   },
