--- a/test/api.v2.domain/index.yml
+++ b/test/api.v2.domain/index.yml
@@ -66,3 +66,16 @@ paths:
                 properties:
                   message:
                     $ref: "#/components/schemas/Message"
+  /undefined/operation/:id:
+    get:
+      responses:
+        200:
+          description: 成功
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Undefined operation response
